# easyupscaler

./: .gitignore  AGENTS.md  Makefile  README-DEV.md  README.md  pyproject.toml
_local_docs/: implementation-todo.md
docs/: adr.md  architecture.md  mission.md  specification-denoise.md  specification-document-mode.md  specification.md
docs/adr/: 001-spandrel-pytorch-backend.md  002-inference-device-policy.md  003-image-output-conventions.md  004-model-registry-and-import.md  005-cli-framework-typer.md  006-batch-processing-and-exit-codes.md  007-tiled-inference.md  008-lazy-torch-imports.md  009-development-toolchain.md  010-code-coverage-gate.md  011-output-conflict-indexing.md  012-denoise-model-auto-download.md  013-denoise-png-output.md  014-heic-two-pass-denoise.md  015-heic-pillow-heif.md  016-optional-output-directory.md  017-scikit-image-dependency.md  018-document-two-pass-pipeline.md  019-document-binarize-antialias.md  020-document-postprocessing-refinements.md  021-document-ocr-tesseract.md  022-opt-in-vlm-ocr-ocrai.md  023-ocrai-markdown-additive.md
easyupscaler/: errors.py  progress.py
easyupscaler/cli/: denoise.py  help_text.py  job_progress.py  main.py  models.py  output_dir.py  scale.py  upscale.py
easyupscaler/config/: paths.py  settings.py
easyupscaler/denoise/: catalog.py  document_constants.py  document_enhance.py  document_ocr.py  document_ocrai.py  downloader.py  memory.py  ocrai_catalog.py  ocrai_downloader.py  ocrai_prompt.py  ocrai_service.py  pipeline.py
easyupscaler/denoise/backends/: archiver_backend.py  base.py  book_compact_backend.py  dejpg_backend.py  fbcnn_backend.py  scunet_backend.py  spandrel_common.py
easyupscaler/denoise/prompts/: ocrai.yaml
easyupscaler/io/: heic.py  images.py
easyupscaler/models/: import_model.py  registry.py
easyupscaler/upscaling/: service.py  tiling.py
easyupscaler/upscaling/backends/: base.py  spandrel_backend.py
tests/: conftest.py  test_cli_denoise.py  test_cli_main.py  test_cli_models.py  test_cli_scale.py  test_cli_upscale.py  test_denoise_backends.py  test_denoise_catalog.py  test_denoise_document.py  test_denoise_downloader.py  test_denoise_pipeline.py  test_document_ocr.py  test_document_ocrai.py  test_images.py  test_import_model.py  test_job_progress.py  test_ocrai_downloader.py  test_ocrai_gguf_validation.py  test_ocrai_prompt.py  test_ocrai_service.py  test_output_dir.py  test_registry.py  test_service.py  test_settings.py  test_smoke.py  test_spandrel_backend.py  test_tiling.py
tests/slow/: test_e2e.py
