[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easyupscaler"
version = "0.2.1"
description = "CLI for upscaling images with GAN-based models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pillow>=10",
    "tomlkit>=0.13",
    "torch>=2.3",
    "spandrel>=0.4",
    "spandrel-extra-arches",
    "numpy>=1.26",
    "scikit-image>=0.22",
    "pillow-heif>=0.16",
    "pytesseract>=0.3",
    "llama-cpp-python>=0.3",
    "pyyaml>=6",
]

[project.urls]
Homepage = "https://github.com/codeprimate/easyupscaler"
Repository = "https://github.com/codeprimate/easyupscaler"
Issues = "https://github.com/codeprimate/easyupscaler/issues"

[project.scripts]
easyupscaler = "easyupscaler.cli.main:main_entry"

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
    "mypy",
    "ruff",
    "types-Pillow",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["easyupscaler"]

[tool.hatch.build.targets.wheel.force-include]
"easyupscaler/denoise/prompts/ocrai.yaml" = "easyupscaler/denoise/prompts/ocrai.yaml"

[tool.mypy]
strict = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "-m \"not slow\" --cov=easyupscaler --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["easyupscaler"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
